--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -18,19 +18,19 @@ p {
 }
 
 button.cta-button {
-  background-color: #f39c12;
+  background-color: #29a6ff;
   border: none;
   color: white;
   padding: 10px 20px;
   cursor: pointer;
   font-size: 1rem;
   margin-top: 1rem;
-  transition: background-color 0.4s ease-in-out, transform 0.4s ease-in-out;
+  transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out;
   border-radius: 10px;
 }
 
 button.cta-button:hover {
-  background-color: #e67e22;
+  background-color: #1e78d3;
   transform: scale(1.05);
 }
 
@@ -60,10 +60,10 @@ button.cta-button:hover {
 
 /* About Us Section */
 .about-us {
-  background-image: url('../src/images/background.jpg');
+  background-image: url('../src/images/main.jpeg');
   background-size: cover;
   background-position: center;
-  padding: 3rem;
+  padding: 5rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -111,8 +111,11 @@ button.cta-button:hover {
 }
 
 .service img {
-  width: 100%;
-  border-radius: 8px;
+  width: 100%;        
+  height: 200px;       
+  object-fit: cover;   
+  border-radius: 8px;  
+  margin: 0;          
 }
 
 .service h3 {
